# fastApi_template

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: api.py
app/api/v1/routers/: health.py
app/core/: logging.py  settings.py
app/db/: deps.py  session.py
docs/: docker_details.md  setup.md
tests/: conftest.py
tests/routers/: test_health.py
