[project]
name = "fastapi-template"
version = "0.1.0"
description = "Standard FastAPI starter template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "databases>=0.9.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.10.0",
  "asyncpg>=0.31.0",
  "httpx>=0.28.1",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "black>=24.0.0",
  "ruff>=0.6.0",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]